2009-07-28  Lluis Sanchez Gual  <lluis@novell.com>

	* MonoDevelop.Projects.Formats.MSBuild/MSBuildFileFormat.cs:
	  Added missing null check.

2009-07-28  Lluis Sanchez Gual  <lluis@novell.com>

	* MonoDevelop.Projects.Dom.Serialization\CodeCompletionDatabase.cs:
	  Use FileShare.Read when opening a pidb file. This is
	  required since the file has to be copied if it is already
	  open.

2009-07-28  Lluis Sanchez Gual  <lluis@novell.com>

	* MonoDevelop.Projects.Formats.MSBuild/MSBuildFileFormat.cs:
	  Add support for fx 3.0 and 3.5 in the VS 2005 file format.
	  VS 2005 can reference 3.0 and 3.5 assemblies if the
	  corresponding frameworks are installed.

2009-07-28  Lluis Sanchez Gual  <lluis@novell.com>

	* MonoDevelop.Projects.Formats.MSBuild/MSBuildProjectHandler.cs:
	  When reading a VS 2005 project, if no framework is
	  specified, use 2.0 as default.

	* MonoDevelop.Projects.addin.xml: Change order of file
	  formats, so the most recent formats are shown first in the
	  lists and combos.

2009-07-28  Mike Krüger  <mkrueger@novell.com>

	* MonoDevelop.Projects.Dom/DomType.cs: Fixed IsAccessible for
	  types (fixing failing unit test).

2009-07-28  Lluis Sanchez Gual  <lluis@novell.com>

	* MonoDevelop.Projects.Formats.MSBuild/MSBuildProjectHandler.cs:
	  Get the project name of a project reference from the path,
	  since the Name attribute may other stuff other than the
	  name.


2009-07-28  Lluis Sanchez Gual  <lluis@novell.com>

	* MonoDevelop.Projects/SolutionItem.cs:
	* MonoDevelop.Projects.Formats.MSBuild/MSBuildFileFormat.cs:
	  Re-enabled check for supported frameworks when checking if
	  msbuild can write a project.

2009-07-28  Lluis Sanchez Gual  <lluis@novell.com>

	* MonoDevelop.Projects/ProjectService.cs: In ReadSolutionItem
	  reset the NeedsReload flag after going through the whole
	  extension chain.

2009-07-27  Lluis Sanchez Gual  <lluis@novell.com>

	* MonoDevelop.Projects/ProjectService.cs: Allow setting the
	  default framework.
